# CMakeExample

./: .gitignore  CMakeLists.txt  CMakeSettings.json  build.bat
headers/: project_metadata.h.in
libs/mylib/src/: lib_functions.cpp
mylib/: CMakeLists.txt
mylib/mylib/: lib_functions.h
mylib/src/: lib_functions.cpp
src/: main.cpp
